--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="240dp"
+        android:layout_height="320dp"
         android:orientation="vertical"
         android:layout_gravity="center"
         tools:ignore="UselessParent">
@@ -51,6 +51,7 @@
             android:drawableLeft="@drawable/ic_baseline_menu_book"
             />
 
+
         <Button
             android:id="@+id/buttonSend"
             android:layout_width="190dp"
@@ -62,6 +63,16 @@
             android:padding="10dp"
             android:drawableLeft="@drawable/ic_baseline_email_24"/>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
+
     </LinearLayout>
 
     <TextView
@@ -70,6 +81,6 @@
         android:layout_gravity="center"
         android:text="@string/app_name"
         android:textSize="15dp"
-        android:translationY="170dp"
+        android:translationY="90dp"
         />
 </LinearLayout>
