--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,86 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="414dp"
-        android:layout_height="274dp"
-        android:layout_gravity="center"
-        android:adjustViewBounds="true"
-        android:maxWidth="200dp"
-        android:maxHeight="250dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/sest02" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/signin"
+        android:text="Sign in"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:layout_margin="50dp"
+        android:gravity="center"/>
 
-    <LinearLayout
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/username"
+        android:layout_below="@id/signin"
+        android:background="#30ffffff"
+        android:hint="Student code"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:drawableLeft="@drawable/ic_baseline_person"
+        android:drawablePadding="20dp"/>
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/username"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:drawablePadding="20dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="320dp"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        tools:ignore="UselessParent">
-
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="190dp"
-            android:layout_height="wrap_content"
-            android:onClick="NextPage1"
-            android:text="ข้อมูลนักศึกษา"
-            android:textSize="18dp"
-            android:backgroundTint="#FFA500"
-            android:translationY="20dp"
-            android:padding="10dp"
-            android:drawableLeft="@drawable/ic_baseline_person"
-            />
-
-        <Button
-            android:id="@+id/btn2"
-            android:layout_width="190dp"
-            android:layout_height="wrap_content"
-            android:onClick="NextPage2"
-            android:text="ข้อมูลรายวิชา"
-            android:textSize="18dp"
-            android:backgroundTint="#FFA500"
-            android:translationY="45dp"
-            android:padding="10dp"
-            android:drawableLeft="@drawable/ic_baseline_menu_book"
-            />
-
-
-        <Button
-            android:id="@+id/buttonSend"
-            android:layout_width="190dp"
-            android:layout_height="wrap_content"
-            android:text="เกี่ยวกับ"
-            android:textSize="18dp"
-            android:backgroundTint="#FFA500"
-            android:translationY="70dp"
-            android:padding="10dp"
-            android:drawableLeft="@drawable/ic_baseline_email_24"/>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/loginbtn"
+        android:layout_below="@id/password"
+        android:text="LOGIN"
+        android:backgroundTint="@color/design_default_color_secondary"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
+        android:onClick="NextPage2"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/app_name"
-        android:textSize="15dp"
-        android:translationY="90dp"
-        />
-</LinearLayout>
+        android:id="@+id/forgotpass"
+        android:layout_below="@id/loginbtn"
+        android:text="Forgot password?"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"/>
+</RelativeLayout>
