--- a/app/src/main/res/layout/activity_inforationoat.xml
+++ b/app/src/main/res/layout/activity_inforationoat.xml
@@ -8,6 +8,34 @@
     android:background="@drawable/bak1"
     tools:context=".Inforationoat">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:padding="10dp">
+        <ImageView
+            android:onClick="btnback02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/left_icon3"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="HOME"
+            android:layout_marginStart="135dp"
+            android:textSize="16dp"
+            android:onClick="N"
+            android:layout_toEndOf="@+id/left_icon3"/>
+        <ImageView
+            android:onClick="NextPage1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,7 +53,7 @@
         \n      ชื่อ(Eng) : Mr.Nutthawut Phosrithong    \n
         \n      คณะ : วิทยาศาสตร์และเทคโนโลยี   \n
         \n      สาขา : วิทยาการคอมพิวเตอร์  \n
-        \n      เข้าศึกษาเมื่อปี : 1/2564   \n
+        \n      เข้าศึกษาเมื่อปี : 1/2564
 "
 
         android:textSize="20dp"
@@ -35,27 +63,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="62dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         tools:ignore="UselessParent">
 
-        <Button
-            android:id="@+id/btnback2"
-            android:layout_width="wrap_content"
-            android:layout_height="47dp"
-            android:onClick="backPage3"
-            android:text="ย้อนกลับ"
-            android:backgroundTint="#D2691E"
-            android:translationX="290dp"
-            android:translationY="10dp"/>
 
         <Button
             android:id="@+id/btnFb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Facebook"
-            android:backgroundTint="#4682B4"
-            android:translationX="50dp"
             android:translationY="10dp"
+            android:backgroundTint="#4682B4"
+            android:layout_gravity="center"
             />
 
     </LinearLayout>
