--- a/app/src/main/res/layout/activity_informationpu.xml
+++ b/app/src/main/res/layout/activity_informationpu.xml
@@ -6,7 +6,39 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/bak1"
+
     tools:context=".Informationpu">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:padding="10dp">
+        <ImageView
+            android:onClick="btnback02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/left_icon"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="HOME"
+            android:layout_marginStart="135dp"
+            android:textSize="16dp"
+            android:layout_toEndOf="@+id/left_icon"/>
+        <ImageView
+            android:onClick="NextPage1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/right_icon"
+            android:src="@drawable/ic_baseline_arrow_forward_24"/>
+
+    </RelativeLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,8 +63,7 @@
         \n
         \n      สาขา : วิทยาการคอมพิวเตอร์
         \n
-        \n      เข้าศึกษาเมื่อปี : 1/2564
-        \n "
+        \n      เข้าศึกษาเมื่อปี : 1/2564"
 
         android:textSize="20dp"
         android:textColor="@color/black"
@@ -40,42 +71,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="62dp"
-        android:orientation="horizontal"
+        android:layout_height="50dp"
+        android:orientation="vertical"
         tools:ignore="UselessParent">
-
-        <Button
-            android:id="@+id/btnstu1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="NextPage1"
-            android:text="ถัดไป"
-            android:textSize="15dp"
-            android:backgroundTint="#D2691E"
-            android:translationX="25dp"
-            android:translationY="10dp"
-            />
-
-        <Button
-            android:id="@+id/btnback02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="backPage3"
-            android:text="ย้อนกลับ"
-            android:textSize="15dp"
-            android:backgroundTint="#D2691E"
-            android:translationX="200dp"
-            android:translationY="10dp"
-            />
 
         <Button
             android:id="@+id/btnFb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Facebook"
-            android:backgroundTint="#4682B4"
-            android:translationX="-35dp"
             android:translationY="10dp"
+            android:layout_gravity="center"
+            android:backgroundTint="#4682B4"
+
             />
     </LinearLayout>
 </LinearLayout>
